Add topic temperature

--- a/quix.yaml
+++ b/quix.yaml
@@ -24,3 +24,6 @@ deployments:
 # This section describes the Topics of the data pipeline
 topics:
   - name: f1-data
+  - name: temperature
+    configuration:
+      partitions: 1
