--- a/quix.yaml
+++ b/quix.yaml
@@ -5,21 +5,7 @@ metadata:
   version: 1.0
 
 # This section describes the Deployments of the data pipeline
-deployments:
-  - name: Demo Data Source
-    application: Demo Data Source
-    version: latest
-    deploymentType: Job
-    resources:
-      cpu: 200
-      memory: 200
-      replicas: 1
-    variables:
-      - name: output
-        inputType: OutputTopic
-        description: Name of the output topic to write into
-        required: true
-        value: f1-data
+deployments: []
 
 # This section describes the Topics of the data pipeline
 topics:
